tests/check/elements/appsink.c
@@ -503,6 +503,31 @@ GST_START_TEST (test_pull_with_timeout)
 
 GST_END_TEST;
 
+GST_START_TEST (test_pull_preroll)
+{
+  GstElement *sink = NULL;
+  GstBuffer *buffer = NULL;
+  GstSample *pulled_preroll = NULL;
+
+  sink = setup_appsink ();
+
+  ASSERT_SET_STATE (sink, GST_STATE_PLAYING, GST_STATE_CHANGE_ASYNC);
+
+  buffer = gst_buffer_new_and_alloc (4);
+  fail_unless (gst_pad_push (mysrcpad, buffer) == GST_FLOW_OK);
+
+  pulled_preroll = gst_app_sink_pull_preroll (GST_APP_SINK (sink));
+  fail_unless (pulled_preroll);
+  gst_sample_unref (pulled_preroll);
+
+  fail_if (gst_app_sink_try_pull_preroll (GST_APP_SINK (sink), 0));
+
+  ASSERT_SET_STATE (sink, GST_STATE_NULL, GST_STATE_CHANGE_SUCCESS);
+  cleanup_appsink (sink);
+}
+
+GST_END_TEST;
+
 static Suite *
 appsink_suite (void)
 {
@@ -520,6 +545,7 @@ appsink_suite (void)
   tcase_add_test (tc_chain, test_buffer_list_signal);
   tcase_add_test (tc_chain, test_segment);
   tcase_add_test (tc_chain, test_pull_with_timeout);
+  tcase_add_test (tc_chain, test_pull_preroll);
 
   return s;
 }
